--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "circle_02/so_long"]
 	path = circle_02/so_long
 	url = https://github.com/NectarSierra/so_long
+[submodule "circle_04/cub3d"]
+	path = circle_04/cub3d
+	url = https://github.com/RomainBoland/cub3d.git
