--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "circle_02/so_long"]
 	path = circle_02/so_long
 	url = https://github.com/NectarSierra/so_long
+	branch = main
 [submodule "circle_04/cub3d"]
 	path = circle_04/cub3d
 	url = https://github.com/RomainBoland/cub3d.git
