--- a/circle_05/CPP_Module_06/ex00/Makefile
+++ b/circle_05/CPP_Module_06/ex00/Makefile
@@ -6,14 +6,14 @@
 #    By: nsaillez <nsaillez@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/12/08 10:58:15 by nsaillez          #+#    #+#              #
-#    Updated: 2026/01/05 10:03:37 by nsaillez         ###   ########.fr        #
+#    Updated: 2026/01/06 16:29:52 by nsaillez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 COMP     = c++
 FLAGS    = -Wall -Wextra -Werror
 STD_FLAG = -std=c++98
-OUT_NAME = output
+OUT_NAME = convert
 
 SRCS     = main.cpp \
 		   ScalarConverter.cpp
