--- a/circle_05/CPP_Module_06/ex01/Makefile
+++ b/circle_05/CPP_Module_06/ex01/Makefile
@@ -6,18 +6,16 @@
 #    By: nsaillez <nsaillez@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/12/08 10:58:15 by nsaillez          #+#    #+#              #
-#    Updated: 2026/01/12 09:51:23 by nsaillez         ###   ########.fr        #
+#    Updated: 2026/01/12 08:59:41 by nsaillez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 COMP     = c++
 FLAGS    = -Wall -Wextra -Werror
 STD_FLAG = -std=c++98
-OUT_NAME = convert
+OUT_NAME = output
 
-SRCS     = main.cpp \
-		   ScalarConverter.cpp \
-		   utils.cpp
+SRCS     = main.cpp
 
 OBJ_DIR  = objs
 OBJS     = $(SRCS:%.cpp=$(OBJ_DIR)/%.o)
